[gd_scene load_steps=9 format=3 uid="uid://5htxiasabwsw"]

[ext_resource type="Script" path="res://CardGame/Scripts/card_player.gd" id="1_uivmn"]
[ext_resource type="Texture2D" uid="uid://bh4xilvgu3miq" path="res://icon.svg" id="2_ap3rq"]
[ext_resource type="PackedScene" uid="uid://cbacwlcc4jbh7" path="res://CardGame/Scenes/card_deck.tscn" id="3_fl2am"]
[ext_resource type="PackedScene" uid="uid://byi3whse1g5hq" path="res://CardGame/Scenes/card_discard_deck.tscn" id="4_qkjm1"]
[ext_resource type="Script" path="res://CardGame/Scripts/card_zone.gd" id="6_2fgfl"]
[ext_resource type="PackedScene" uid="uid://ktfm6qa8eb" path="res://CardGame/Scenes/card_zone.tscn" id="6_apu2s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc4fk"]
size = Vector2(300, 55)

[sub_resource type="Curve2D" id="Curve2D_c41gb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -133, 0, 0, 0, 0, 0, 133, 0)
}
point_count = 2

[node name="Player1" type="Node2D"]
position = Vector2(0, 324)
script = ExtResource("1_uivmn")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(1, 0.541176, 1, 1)
position = Vector2(1045, 242)
scale = Vector2(0.757813, 0.714844)
texture = ExtResource("2_ap3rq")

[node name="CardDeck" parent="." instance=ExtResource("3_fl2am")]
position = Vector2(260, 240)

[node name="CardDiscardDeck" parent="." instance=ExtResource("4_qkjm1")]
position = Vector2(100, 240)

[node name="HandZone" parent="." instance=ExtResource("6_apu2s")]
position = Vector2(580, 239)

[node name="BetZone" parent="." instance=ExtResource("6_apu2s")]
position = Vector2(577, 68)
max_cards = 0
location_sort = false
moveable_cards = false

[node name="CheckZone" type="Area2D" parent="."]
position = Vector2(970, 68)
script = ExtResource("6_2fgfl")
spaces = 2
max_cards = 0
moveable_cards = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckZone"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_fc4fk")

[node name="HandPath" type="Path2D" parent="CheckZone"]
curve = SubResource("Curve2D_c41gb")

[node name="Cards" type="Node2D" parent="."]
z_index = 1

[node name="MousePin" type="PinJoint2D" parent="."]
node_a = NodePath("StaticBody2D")
softness = 3.0
motor_enabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="MousePin"]

[node name="ColorRect" type="ColorRect" parent="MousePin/StaticBody2D"]
z_index = 3250
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
mouse_filter = 2
color = Color(1, 0.25098, 1, 1)

[connection signal="draw_card" from="CardDeck" to="." method="_on_card_deck_draw_card"]
[connection signal="discard_card" from="CardDiscardDeck" to="." method="_on_card_discard_deck_discard_card"]
[connection signal="area_entered" from="CheckZone" to="CheckZone" method="_on_area_entered"]
[connection signal="area_exited" from="CheckZone" to="CheckZone" method="_on_area_exited"]
[connection signal="input_event" from="CheckZone" to="CheckZone" method="_on_input_event"]
[connection signal="child_entered_tree" from="Cards" to="." method="_on_cards_child_entered_tree"]

[editable path="HandZone"]
